# POS_SEM_2022

./: CMakeLists.txt  README.md  client.cpp  ftp.c  http.c  http.h  https.c  https.h  logger.c  logger.h  main.c
cmake/: GlibUtils.cmake
data/: CMakeLists.txt  gresource.xml.in
data/ui/: file_download_modal.cmb  file_download_modal.ui  main_window.cmb  main_window.ui
server_files/: 1  2
src/: CMakeLists.txt  main.cpp
src/windows/Application/: Application.cpp  Application.h
src/windows/ConnectedWindow/: ConnectedWindow.cpp  ConnectedWindow.h
src/windows/CurrentDownloadsWindow/: CurrentDownloadsWindow.cpp  CurrentDownloadsWindow.h
src/windows/FileDownloadWindow/: FileDownloadWindow.cpp  FileDownloadWindow.h
src/windows/MainAppWindow/: MainAppWindow.cpp  MainAppWindow.h
src/windows/ServerSetup/: ServerSetupWindow.cpp  ServerSetupWindow.h
